There was a problem where Ansible was getting confused with 'install_dir', so changing the var name to 'install_directory'. Same with 'build_dir' to 'build_directory'

--- a/FFTW/playbooks/FFTW_installation/play.yaml
+++ b/FFTW/playbooks/FFTW_installation/play.yaml
@@ -7,10 +7,10 @@
   vars:
 
     # FFTW build directory
-    build_dir: '{{ build_dir | default("${HOME}/build") }}'
+    build_directory: '{{ build_dir | default("${HOME}/build") }}'
 
     # FFTW install directory
-    install_dir: '{{ install_dir | default("${HOME}/custom_fftw") }}'
+    install_directory: '{{ install_dir | default("${HOME}/custom_fftw") }}'
 
     # RHEL version
     rhel_ver: '{{ rhel_version | default("7") }}'
