--- a/FFTW/playbooks/FFTW_installation/roles/get/tasks/main.yaml
+++ b/FFTW/playbooks/FFTW_installation/roles/get/tasks/main.yaml
@@ -8,16 +8,16 @@
 - block:
   - name: If using RHEL 7 and non-s2i/non-ubi, get FFTW2 source rpm
     shell: |
-      cd {{ build_dir }}
+      cd {{ build_directory }}
       yumdownloader --source fftw2
 
   - name: Unpack source rpm and place the spec file in {{ build_dir }}
     shell: |
-      cd {{ build_dir }}
+      cd {{ build_directory }}
       rpm2cpio fftw*.rpm | cpio -civ '*.spec'
 
   - find:
-      paths: '{{ build_dir }}'
+      paths: '{{ build_directory }}'
       patterns: '*.rpm'
     register: find_output
 
@@ -28,7 +28,7 @@
     with_items: '{{ find_output["files"] }}'
 
   - name: If using RHEL 7, get FFTW2 version specified in the spec file
-    shell: cd {{ build_dir }} && cat fftw2.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
+    shell: cd {{ build_directory }} && cat fftw2.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
     register: fftw2_version
 
   - name: For RHEL 7 only -- FFTW2 version
@@ -39,16 +39,16 @@
   - name: For RHEL 7, get FFTW2 from fftw.org
     unarchive:
       src: 'http://fftw.org/fftw-{{ fftw2_version.stdout }}.tar.gz'
-      dest: '{{ build_dir }}'
+      dest: '{{ build_directory }}'
       remote_src: yes
 
   - name: If using RHEL 7, Remove FFTW2 spec file
     file:
       state: absent
-      path: '{{ build_dir }}/fftw2.spec'
+      path: '{{ build_directory }}/fftw2.spec'
 
   - name: Rename fftw-2.x.y to FFTW
-    command: mv {{ build_dir }}/fftw-{{ fftw2_version.stdout }} {{ build_dir }}/FFTW
+    command: mv {{ build_directory }}/fftw-{{ fftw2_version.stdout }} {{ build_directory }}/FFTW
 
   when: rhel_ver == "7" and ubi == "no" and s2i == "no"
 
@@ -65,6 +65,6 @@
       remote_src: yes
 
   - name: Rename fftw-{{ fftw3_ver }} to FFTW
-    command: mv {{ build_dir }}/fftw-{{ fftw3_ver }} {{ build_dir }}/FFTW
+    command: mv {{ build_directory }}/fftw-{{ fftw3_ver }} {{ build_directory }}/FFTW
 
   when: rhel_ver == "8" or (rhel_ver == "7" and s2i == "yes") or (rhel_ver == "7" and ubi == "yes")
