Fixing NumPy failed build. NumPy was failing because the Ansible python interpreter was incorrect and there was no /usr/include/sys/endian.h file

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
@@ -61,6 +61,9 @@ COPY TensorFlow/playbooks/cudnn_installation ${CUDNN_INSTALLATION}
 # Put on port 8080
 EXPOSE 8080
 
+# Create symlink for NumPy so that it can find endian.h
+RUN ln -s /usr/include/endian.h /usr/include/sys/endian.h
+
 # Install Python version ${PYTHON_VERSION}
 RUN yum -y install gcc \
                    make \
