PYTHONPATH and its default value were set incorrectly. The PYTHONPATH var should point to '<some_path_to_python>/site-packages'.

--- a/TensorFlow/playbooks/TensorFlow_installation/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/play.yaml
@@ -40,7 +40,7 @@
     GCC_LIBS: '{{ gcc_libs | default("/usr/lib64") }}'
 
     # Python path
-    PYTHONPATH: '{{ pythonpath | default("/usr/lib/python3.6") }}'
+    PYTHONPATH: '{{ pythonpath | default("/usr/lib/python3.6/site-packages") }}'
 
   roles:
     # Setup NumPy and TensorFlow build folders
