--- a/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx/job/cpu_manager/tensorflow-nfd-build-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx/job/cpu_manager/tensorflow-nfd-build-job.yaml
@@ -23,7 +23,7 @@ objects:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
           command: ["/usr/libexec/s2i/run"]
-          args: ["${RHEL_VERSION}", "cpu", "${NUM_CPUS}", "${CC}"]
+          args: ["${RHEL_VERSION}", "cpu", "${NUM_CPUS}", "${CC}", "none", "${PYTHON_EXECUTABLE}"]
         restartPolicy: "Never"
         affinity:
           nodeAffinity:
@@ -68,6 +68,10 @@ parameters:
   name: "RHEL_VERSION"
   from: '[0-9]{1}'
   value: "7"
+  required: true
+- description: "Path to Python executable"
+  name: "PYTHON_EXECUTABLE"
+  value: "/usr/bin/python3"
   required: true
 - description: "Number of CPUs to use"
   name: "NUM_CPUS"
