ubi7 builds FFTW v3.3.8, so the NumPy build should reference v3.3.8, not v2.x.y... Also fixing NumPy PYTHONPATH issue. The library folder should be 'lib', not 'lib64'

--- a/TensorFlow/playbooks/TensorFlow_installation/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/play.yaml
@@ -42,6 +42,10 @@
     # Python path
     PYTHONPATH: '{{ pythonpath | default("/usr/lib/python3.6/site-packages") }}'
 
+    # Use UBI or s2i?
+    UBI: '{{ use_ubi | default("no") }}'
+    S2I: '{{ use_s2i | default("no") }}'
+
   roles:
     # Setup NumPy and TensorFlow build folders
     - role: setup
