--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -5,7 +5,7 @@
     state: absent
     path: '{{ NUMPY_SITE_CFG }}'
 
-- name: Set NumPy site config file for RHEL 7 -- use FFTW if specified
+- name: Set NumPy site config file for non-ubi RHEL 7 -- use FFTW if specified
   shell: |
     echo '[ALL]' >> {{ NUMPY_SITE_CFG }}
     echo 'libraries = {{ FFTW_RHEL7_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
@@ -18,7 +18,7 @@
     echo 'atlas_libs = lapack, blas, cblas, tatlas' >> {{ NUMPY_SITE_CFG }}
   when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no' and RHEL_VERSION == '7'
 
-- name: Set NumPy site config file for RHEL 8 -- use FFTW if specified
+- name: Set NumPy site config file for RHEL 8 and ubi7 -- use FFTW if specified
   shell: |
     echo '[ALL]' >> {{ NUMPY_SITE_CFG }}
     echo 'libraries = {{ FFTW_RHEL8_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
@@ -29,7 +29,7 @@
     echo '' >> {{ NUMPY_SITE_CFG }}
     echo '[atlas]' >> {{ NUMPY_SITE_CFG }}
     echo 'atlas_libs = lapack, blas, cblas, tatlas' >> {{ NUMPY_SITE_CFG }}
-  when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no' and RHEL_VERSION == '8'
+  when: (USE_FFTW == 'yes' and USE_OPENBLAS == 'no' and RHEL_VERSION == '8') or (USE_FFTW == 'yes' and USE_OPENBLAS == 'no' and RHEL_VERSION == '7' and UBI == 'yes') or (USE_FFTW == 'yes' and USE_OPENBLAS == 'no' and RHEL_VERSION == '7' and S2I == 'yes')
 
 - name: Some versions of NumPy do not work well with later versions of Cython, so we need to add the -3 flag
   lineinfile:
