--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
@@ -3,7 +3,7 @@
 - name: Create NumPy 'site-packages' install folder so that NumPy can write to it
   file:
     state: directory
-    path: '{{ NUMPPY_INSTALL_DIR }}/lib/python3.6/site-packages'
+    path: '{{ NUMPY_INSTALL_DIR }}/lib/python3.6/site-packages'
 
 - name: Install NumPy
   shell: |
